--- a/build.gradle
+++ b/build.gradle
@@ -39,8 +39,8 @@ dependencies {
 
 sonarqube {
   properties {
-    property "sonar.projectKey", "clagosu_spring-clinic"
-    property "sonar.organization", "clagosu"
+    property "sonar.projectKey", "devsecops-usach_spring-clinic"
+    property "sonar.organization", "devsecops-usach"
     property "sonar.host.url", "https://sonarcloud.io"
   }
 }
