Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,3 +59,8 @@ jobs:
     inputs:
       pollingTimeoutSec: '300'
     displayName: 'Publish Analysis Results'
+    
+  - task: sonarcloud-buildbreaker@2
+    inputs:
+      SonarCloud: 'Sonarcloud'
+      organization: 'devsecops-usach'
