Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -70,4 +70,4 @@ jobs:
     clean: all
   displayName:  Image Build
   steps:
-    - script: "Creando imagen Docker"
+    - script: echo "Creando imagen Docker"
