Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -66,6 +66,7 @@ jobs:
   #    organization: 'devsecops-usach'
 
 - job: docker
+  dependsOn: sonar
   workspace:
     clean: all
   displayName:  Image Build
