--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
   id 'io.spring.dependency-management' version '1.0.11.RELEASE'
   id 'java'
   id 'org.sonarqube' version '3.3'
+  id 'org.cyclonedx.bom' version '1.6.1'
 }
 
 apply plugin: 'java'
