--- a/build.gradle
+++ b/build.gradle
@@ -35,6 +35,7 @@ dependencies {
   runtimeOnly 'org.postgresql:postgresql'
   developmentOnly 'org.springframework.boot:spring-boot-devtools'
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
+  testImplementation group: 'junit', name: 'junit', version: '4.13'
 }
 
 sonarqube {
