--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,7 +78,7 @@ jobs:
   - task: dependency-check-build-task@6
     inputs:
       projectName: 'Spring-clinic'
-      scanPath: '.'
+      scanPath: '$(Pipeline.Workspace)'
       format: 'HTML'
 
 - job: docker
