--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,6 @@
 trigger:
 - main
-- feature-darwinMunoz-interfaz
+- feature-*
 
 pool:
   vmImage: ubuntu-latest
@@ -18,44 +18,3 @@ jobs:
       javaHomeOption: 'JDKVersion'
       sonarQubeRunAnalysis: false
       spotBugsAnalysis: false
-
-  - task: CopyFiles@2
-    inputs:
-      sourceFolder: '$(Build.SourcesDirectory)'
-      contents: |
-        **/build/libs/testing-*.jar
-      targetFolder: '$(Build.ArtifactStagingDirectory)'
-
-  - task: PublishBuildArtifacts@1
-    inputs:
-      pathToPublish: '$(Build.ArtifactStagingDirectory)'
-      artifactName: appJar
-      publishLocation: 'Container'
-
-- job: sonar
-  workspace:
-    clean: all
-  displayName:  Code Review
-  steps:
-  - task: SonarCloudPrepare@1
-    inputs:
-      SonarCloud: 'Sonarcloud'
-      organization: 'devops-foundation'
-      projectKey: 'devops-foundation'
-      projectName: 'testing-web'
-    displayName: 'Preparing Sonarqube Environment'
-    
-  - task: Gradle@3
-    inputs:
-      gradleWrapperFile: 'gradlew'
-      tasks: "sonarqube"
-      javaHomeOption: 'JDKVersion'
-      sonarQubeRunAnalysis: true
-      sqGradlePluginVersionChoice: 'specify'
-      sonarQubeGradlePluginVersion: '3.3'
-    displayName: 'Analyze current Branch'
-    
-  - task: SonarCloudPublish@1
-    inputs:
-      pollingTimeoutSec: '300'
-    displayName: 'Publish Analysis Results'
