--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -30,7 +30,7 @@ jobs:
     
     - run: |
        echo "Run, Build Application using script"
-       chmod +x ${{ GITHUB_WORKSPACE }}gradlew
+       chmod +x gradlew
     
     - name: Build with Gradle
       uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
